# AgentOps

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json  phase1_test_report.txt  turbo.json
.github/workflows/: ci.yml
apps/agent-runtime/: README.md  phase2_metrics.txt  phase3_metrics.txt  pyproject.toml  test_results_phase3.txt
apps/agent-runtime/agent/: __init__.py  graph.py  main.py  nodes.py  state.py
apps/agent-runtime/agent/memory/: __init__.py  embeddings.py  episodic.py  procedural.py  reranker.py  semantic.py  working.py
apps/agent-runtime/agent/tools/: base_tool.py
apps/agent-runtime/tests/: conftest.py  test_episodic_memory.py  test_memory.py  test_procedural_memory.py  test_react_and_edges.py  test_semantic_memory.py  test_working_memory.py
apps/api-gateway/: README.md  alembic.ini  conftest.py  pyproject.toml  pytest.ini
apps/api-gateway/app/: __init__.py  config.py  main.py  redis_client.py
apps/api-gateway/app/db/: __init__.py  base.py  models.py  session.py
apps/api-gateway/app/middleware/: __init__.py  auth.py  pii_redact.py  rate_limit.py  request_id.py
apps/api-gateway/app/models/: __init__.py  agents.py  common.py  hitl.py  incidents.py  memory.py  tools.py  workflows.py
apps/api-gateway/app/routers/: __init__.py  agents.py  hitl.py  incidents.py  memory.py  observability.py  tools.py  workflows.py
apps/api-gateway/migrations/: env.py
apps/api-gateway/migrations/versions/: 001_initial_schema.py
apps/api-gateway/tests/: boilerplate_mocks.py  conftest.py  test_async_patterns.py  test_crud_agents.py  test_crud_hitl.py  test_crud_incidents.py  test_crud_memory.py  test_crud_tools.py  test_crud_workflows.py  test_generated_tools.py  test_jwt_auth.py  test_migrations.py  test_observability.py  test_rbac.py  test_redis_caching.py  test_schema_validation.py  test_security.py
apps/ui/: index.html  package.json
apps/ui/src/: App.tsx  index.css
infra/docker/: agent-runtime.Dockerfile  api-gateway.Dockerfile  ui.Dockerfile
infra/k8s/: deployment.yaml
infra/terraform/: main.tf
scripts/: generate_pytest.py  setup-dev.ps1
tests/: e2e_workflow_test.py
