[tool.poetry]
name = "agent-runtime"
version = "0.1.0"
description = "AgentOps Asynchronous Agent Execution Engine"
authors = ["AgentOps Architect"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
aiokafka = "^0.10.0"
redis = {version = "^5.0.3", extras = ["hiredis"]}
httpx = "^0.27.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
