[tool.poetry]
name = "agent-runtime"
version = "0.1.0"
description = "AgentOps Asynchronous Agent Execution Engine"
authors = ["AgentOps Architect"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
aiokafka = "^0.10.0"
redis = {version = "^5.0.3", extras = ["hiredis"]}
httpx = "^0.27.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
langchain-core = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langgraph = "^0.1.0"
langgraph-checkpoint-sqlite = "^1.0.0"
langsmith = "^0.1.0"
openai = "^1.30.0"
anthropic = {version = "^0.28.0", optional = true}
pinecone = {version = "^3.2.0", optional = true}
cohere = {version = "^5.0.0", optional = true}
asyncpg = {version = "^0.29.0", optional = true}
orjson = "^3.9.0"
playwright = {version = "^1.44.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
anthropic = ["anthropic"]
pinecone = ["pinecone"]
cohere = ["cohere"]
asyncpg = ["asyncpg"]
playwright = ["playwright"]
all = ["anthropic", "pinecone", "cohere", "asyncpg", "playwright"]

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
fakeredis = {version = "^2.23.0", extras = ["aioredis"]}
anyio = {version = "^4.3.0", extras = ["trio"]}
httpx = "^0.27.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
