[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "AgentOps API Gateway Service"
authors = ["AgentOps Architect"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# --- Web Framework ---
fastapi = "^0.110.0"
uvicorn = {version = "^0.28.0", extras = ["standard"]}
gunicorn = "^21.2.0"

# --- Data Validation ---
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

# --- Database (Async SQLAlchemy + asyncpg + Alembic) ---
sqlalchemy = {version = "^2.0.29", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# --- Redis (Async) ---
redis = {version = "^5.0.3", extras = ["hiredis"]}

# --- Auth (JWT + Password Hashing) ---
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"

# --- HTTP Client ---
httpx = "^0.27.0"

# --- Observability ---
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"

# --- Utilities ---
orjson = "^3.9.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
black = "^24.2.0"
mypy = "^1.8.0"
ruff = "^0.3.4"
aiosqlite = "^0.20.0"
fakeredis = {version = "^2.23.0", extras = ["aioredis"]}
anyio = {version = "^4.3.0", extras = ["trio"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["conftest\\.py$", "tests/", "migrations/"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
